refactor to a better unique namespace

--- a/docs/src/content/docs/README.mdx
+++ b/docs/src/content/docs/README.mdx
@@ -1,6 +1,6 @@
 ---
 title: Documentation
-description: Documentation for kit.
+description: Documentation for codekite.
 ---
 
 This uses [Starlight](https://starlight.astro.build) to build the documentation.
