--- a/docs/src/content/docs/core-concepts/llm-context-best-practices.mdx
+++ b/docs/src/content/docs/core-concepts/llm-context-best-practices.mdx
@@ -4,7 +4,7 @@ title: LLM Best Practices
 
 import { Aside } from '@astrojs/starlight/components';
 
-Providing the right context to a Large Language Model (LLM) is critical for getting accurate and relevant results when building AI developer tools with `kit`. This guide outlines best practices for assembling context using `kit` features.
+Providing the right context to a Large Language Model (LLM) is critical for getting accurate and relevant results when building AI developer tools with `codekite`. This guide outlines best practices for assembling context using `codekite` features.
 
 ### 1. File Tree (`repo.get_file_tree`)
 
