--- a/docs/src/content/docs/core-concepts/search-approaches.mdx
+++ b/docs/src/content/docs/core-concepts/search-approaches.mdx
@@ -2,7 +2,7 @@
 title: Searching
 ---
 
-Not sure **which `kit` feature to reach for**?  Use this page as a mental map of
+Not sure **which `codekite` feature to reach for**?  Use this page as a mental map of
 search-and-discovery tools - from plain-text grep all the way to LLM-powered
 semantic retrieval.
 
