--- a/docs/src/content/docs/development/roadmap.mdx
+++ b/docs/src/content/docs/development/roadmap.mdx
@@ -1,18 +1,18 @@
 ---
-title: Kit Project Roadmap
+title: codekite Project Roadmap
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-This document outlines the current capabilities of the `kit` library and a potential roadmap for its future development. It's a living document and will evolve as the project progresses.
+This document outlines the current capabilities of the `codekite` library and a potential roadmap for its future development. It's a living document and will evolve as the project progresses.
 
 ## Core Philosophy
 
-`kit` aims to be a comprehensive Python toolkit for advanced code understanding, analysis, and interaction, with a strong emphasis on leveraging Large Language Models (LLMs) where appropriate. It's designed to be modular, extensible, and developer-friendly.
+`codekite` aims to be a comprehensive Python toolkit for advanced code understanding, analysis, and interaction, with a strong emphasis on leveraging Large Language Models (LLMs) where appropriate. It's designed to be modular, extensible, and developer-friendly.
 
 ## Current Capabilities
 
-As of now, `kit` provides the following core functionalities:
+As of now, `codekite` provides the following core functionalities:
 
 <CardGrid>
 	<Card title="Repository Interaction">
@@ -71,9 +71,9 @@ Here are some areas we're looking to improve and expand upon:
 
 ### 3. Code Transformation & Generation
 
-*   **Refactoring Tools:** Leverage `kit`'s understanding of code to suggest or perform automated refactoring.
+*   **Refactoring Tools:** Leverage `codekite`'s understanding of code to suggest or perform automated refactoring.
 *   **Code Generation:** Explore LLM-powered code generation based on existing codebase patterns or natural language descriptions.
-*   **Documentation Generation:** Automate the creation or updating of code documentation using `kit`'s analysis and LLM capabilities.
+*   **Documentation Generation:** Automate the creation or updating of code documentation using `codekite`'s analysis and LLM capabilities.
 
 ### 4. Broader Language & Framework Support
 
@@ -84,20 +84,20 @@ Here are some areas we're looking to improve and expand upon:
 
 *   **Comprehensive Testing:** Ensure high test coverage for all modules and functionalities.
 *   **Documentation:** Maintain high-quality, up-to-date documentation, including API references, tutorials, and practical recipes.
-*   **CLI Development:** Develop a more feature-rich and user-friendly command-line interface for common `kit` operations.
-*   **IDE Integration:** Explore possibilities for integrating `kit`'s features into popular IDEs via plugins, MPC, or Language Server Protocol (LSP) extensions.
-*   **REST API Service:** Develop a comprehensive REST API service to make `kit`'s capabilities accessible to non-Python users and applications. This would allow developers using any programming language to leverage `kit`'s code intelligence features through standard HTTP requests.
+*   **CLI Development:** Develop a more feature-rich and user-friendly command-line interface for common `codekite` operations.
+*   **IDE Integration:** Explore possibilities for integrating `codekite`'s features into popular IDEs via plugins, MPC, or Language Server Protocol (LSP) extensions.
+*   **REST API Service:** Develop a comprehensive REST API service to make `codekite`'s capabilities accessible to non-Python users and applications. This would allow developers using any programming language to leverage `codekite`'s code intelligence features through standard HTTP requests.
 
 ### 6. Cross-Language & Cross-Platform Support
 
-*   **REST API & Service Layer:** Expand the REST API service to provide comprehensive access to all `kit` features:
+*   **REST API & Service Layer:** Expand the REST API service to provide comprehensive access to all `codekite` features:
     *   **Containerized Deployment:** Provide Docker images and deployment templates for easy self-hosting.
-    *   **Client Libraries:** Develop official client libraries for popular languages (TypeScript, Go, Rust) to interact with the `kit` API.
+    *   **Client Libraries:** Develop official client libraries for popular languages (TypeScript, Go, Rust) to interact with the `codekite` API.
     *   **Authentication & Multi-User Support:** Implement secure authentication and multi-user capabilities for shared deployments.
     *   **Webhooks & Events:** Support webhook integrations for code events and analysis results.
 
 ### 7. Community & Extensibility
 
-*   **Plugin Architecture:** Design `kit` with a clear plugin architecture to allow the community to easily add new languages, analysis tools, or LLM integrations.
+*   **Plugin Architecture:** Design `codekite` with a clear plugin architecture to allow the community to easily add new languages, analysis tools, or LLM integrations.
 
 This roadmap is ambitious, and priorities will be adjusted based on user feedback and development progress.
