--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: Kit Documentation
+title: CodeKite Documentation
 template: doc
 tableOfContents: false
-bodyClass: kit-homepage
+bodyClass: codekite-homepage
 ---
 
 import Card from "../../components/Card.astro";
@@ -13,7 +13,7 @@ import { Image } from "astro:assets";
 
 ## Map any codebase
 
-Welcome to **kit** - the Python toolkit from [Shane Holloman](https://shaneholloman.dev) for building LLM-powered developer tools and workflows. kit shines for getting \*\*precise, accurate, and relevant context\*\* to LLMs. Use kit to build code reviewers, code generators and graphs, even full-fledged coding assistants: all enriched with the right code context. MIT-licensed on \[GitHub\](https://github.com/shaneholloman/codekite).
+Welcome to **codekite** - the Python toolkit from [Shane Holloman](https://shaneholloman.dev) for building LLM-powered developer tools and workflows. codekite shines for getting \*\*precise, accurate, and relevant context\*\* to LLMs. Use codekite to build code reviewers, code generators and graphs, even full-fledged coding assistants: all enriched with the right code context. MIT-licensed on \[GitHub\](https://github.com/shaneholloman/codekite).
 
 ## Map any codebase
 
@@ -35,14 +35,14 @@ Leverage ready-made utilities for code chunking, context retrieval, and interact
 
 <CardGroup cols={2}>
   <Card title="Overview" href="/introduction/overview">
-    What Kit is, why it exists, and how to install it.
+    What codekite is, why it exists, and how to install it.
   </Card>
   <Card title="Core Concepts" href="/core-concepts/repository-api">
     Deep-dive into the Repository API, symbol extraction, vector search, and
     architecture.
   </Card>
   <Card title="Tutorials" href="/tutorials/ai_pr_reviewer">
-    Step-by-step tutorials to build real-world tools with Kit.
+    Step-by-step tutorials to build real-world tools with codekite.
   </Card>
   <Card title="API docs" href="/api/repository">
     Detailed API documentation for the primary classes.
