--- a/docs/src/content/docs/introduction/overview.mdx
+++ b/docs/src/content/docs/introduction/overview.mdx
@@ -2,13 +2,13 @@
 title: Overview
 ---
 
-## kit: Code Intelligence Toolkit
+## codekite: Code Intelligence Toolkit
 
 A modular, production-grade toolkit for codebase mapping, symbol extraction, code search, and LLM-powered developer workflows. Supports multi-language codebases via `tree-sitter`.
 
-`kit` features a "mid-level API" to build your own custom tools, applications, agents, and workflows: easily build code review bots, semantic code search, documentation generators, and more.
+`codekite` features a "mid-level API" to build your own custom tools, applications, agents, and workflows: easily build code review bots, semantic code search, documentation generators, and more.
 
-`kit` is **free and open source** with a permissive MIT license. Check it out on [GitHub](https://github.com/shaneholloman/codekite).
+`codekite` is **free and open source** with a permissive MIT license. Check it out on [GitHub](https://github.com/shaneholloman/codekite).
 
 ## Installation
 
@@ -29,15 +29,15 @@ pip install codekite[all]
 
 ```sh
 git clone https://github.com/shaneholloman/codekite.git
-cd kit
+cd codekite
 uv venv .venv
 source .venv/bin/activate
 uv pip install -e .
 ```
 
-## Why Use kit?
+## Why Use codekite?
 
-`kit` helps with:
+`codekite` helps with:
 
 *   **Unifying Code Access:** Provides a single, consistent `Repository` object to interact with files, symbols, and search across diverse codebases, regardless of language.
 *   **Deep Code Understanding:** Leverages `tree-sitter` for accurate, language-specific parsing, enabling reliable symbol extraction and structural analysis across an entire codebase.
@@ -45,7 +45,7 @@ uv pip install -e .
 
 ## Core Philosophy
 
-`kit` aims to be a **toolkit** for building applications, agents, and workflows.
+`codekite` aims to be a **toolkit** for building applications, agents, and workflows.
 It handles the low-level parsing and indexing complexity, and allows you to adapt these components to your specific needs.
 
 We believe the building blocks for code intelligence and LLM workflows for developer tools should be free and open source,
