--- a/docs/src/content/docs/api/code_searcher.mdx
+++ b/docs/src/content/docs/api/code_searcher.mdx
@@ -11,23 +11,23 @@ This page details the API for the `CodeSearcher` class, used for performing text
 To use the `CodeSearcher`, you first need to initialize it with the path to your repository:
 
 ```python
-from kit.code_searcher import CodeSearcher
+from codekite.code_searcher import CodeSearcher
 
 searcher = CodeSearcher(repo_path="/path/to/your/repo")
-# Or, if you have a kit.Repository object:
+# Or, if you have a codekite.Repository object:
 # searcher = repo.get_code_searcher()
 ```
 
 <Aside type="note">
-  If you are using the `kit.Repository` object, you can obtain a `CodeSearcher` instance via `repo.get_code_searcher()` which comes pre-configured with the repository path.
+  If you are using the `codekite.Repository` object, you can obtain a `CodeSearcher` instance via `repo.get_code_searcher()` which comes pre-configured with the repository path.
 </Aside>
 
 ## `SearchOptions` Dataclass
 
-The `search_text` method uses a `SearchOptions` dataclass to control search behavior. You can import it from `kit.code_searcher`.
+The `search_text` method uses a `SearchOptions` dataclass to control search behavior. You can import it from `codekite.code_searcher`.
 
 ```python
-from kit.code_searcher import SearchOptions
+from codekite.code_searcher import SearchOptions
 ```
 
 **Fields:**
@@ -66,7 +66,7 @@ Searches for a text pattern (which can be a regular expression) in files matchin
 **Example Usage:**
 
 ```python
-from kit.code_searcher import CodeSearcher, SearchOptions
+from codekite.code_searcher import CodeSearcher, SearchOptions
 
 # Assuming 'searcher' is an initialized CodeSearcher instance
 
