--- a/docs/src/content/docs/core-concepts/configuring-semantic-search.mdx
+++ b/docs/src/content/docs/core-concepts/configuring-semantic-search.mdx
@@ -2,7 +2,7 @@
 title: Configuring Semantic Search
 ---
 
-Semantic search allows you to find code based on meaning rather than just keywords. To enable this in `kit`, you need to configure a vector embedding model and potentially a vector database backend.
+Semantic search allows you to find code based on meaning rather than just keywords. To enable this in `codekite`, you need to configure a vector embedding model and potentially a vector database backend.
 
 ## Required: Embedding Function
 
@@ -11,7 +11,7 @@ You must provide an embedding function (`embed_fn`) when first accessing semanti
 This function takes a list of text strings and returns a list of corresponding embedding vectors.
 
 ```python
-from kit import Repo
+from codekite import Repo
 # Example using a hypothetical embedding function
 from my_embedding_library import get_embeddings
 
@@ -33,20 +33,20 @@ Popular choices include models from OpenAI, Cohere, or open-source models via li
 
 ## Backend Configuration
 
-`kit`'s `VectorSearcher` uses a pluggable backend system for storing and querying vector embeddings. Currently, the primary supported and default backend is **ChromaDB**.
+`codekite`'s `VectorSearcher` uses a pluggable backend system for storing and querying vector embeddings. Currently, the primary supported and default backend is **ChromaDB**.
 
 ### ChromaDB (Default)
 
-When you initialize `VectorSearcher` (typically via `repo.get_vector_searcher()`) without specifying a `backend` argument, `kit` automatically uses an instance of `ChromaDBBackend`.
+When you initialize `VectorSearcher` (typically via `repo.get_vector_searcher()`) without specifying a `backend` argument, `codekite` automatically uses an instance of `ChromaDBBackend`.
 
 **Configuration Options:**
 
 *   **`persist_dir` (Optional[str]):** This is the most important configuration option. It specifies the directory where the ChromaDB index will be stored on disk.
     *   If you provide a path to `repo.get_vector_searcher(persist_dir=...)` or directly to the `VectorSearcher` constructor, that path will be used.
-    *   If no `persist_dir` is specified, `kit` defaults to creating the index in a subdirectory within your repository, typically at `YOUR_REPO_PATH/.kit/vector_db/`.
+    *   If no `persist_dir` is specified, `codekite` defaults to creating the index in a subdirectory within your repository, typically at `YOUR_REPO_PATH/.codekite/vector_db/`.
     *   Persisting the index allows you to reuse it across sessions without needing to re-embed and re-index your codebase every time.
 
-At present, other ChromaDB-specific configurations (like collection names or distance metrics) are managed internally by `kit` with default settings. Future versions may expose more fine-grained control.
+At present, other ChromaDB-specific configurations (like collection names or distance metrics) are managed internally by `codekite` with default settings. Future versions may expose more fine-grained control.
 
 ```python
 # Example: Initialize with default ChromaDB backend and specify a persist directory
@@ -69,7 +69,7 @@ results = vector_searcher_reloaded.search("my query")
 
 ### Other Backends
 
-While the `VectorDBBackend` interface is designed to support other vector databases, ChromaDB is the primary focus for now. If you have a need for other backends like Faiss (especially for purely in-memory, non-persisted use cases) or others, please raise an issue on the `kit` GitHub repository.
+While the `VectorDBBackend` interface is designed to support other vector databases, ChromaDB is the primary focus for now. If you have a need for other backends like Faiss (especially for purely in-memory, non-persisted use cases) or others, please raise an issue on the `codekite` GitHub repository.
 
 ## Choosing an Embedding Model
 
