--- a/docs/src/content/docs/core-concepts/semantic-search.mdx
+++ b/docs/src/content/docs/core-concepts/semantic-search.mdx
@@ -5,7 +5,7 @@ import { Aside } from '@astrojs/starlight/components';
 
 > **⚠ Experimental:** Vector / semantic search is an early feature.  APIs, CLI commands, and index formats may change in future releases without notice.
 
-kit supports semantic code search using vector embeddings and ChromaDB.
+codekite supports semantic code search using vector embeddings and ChromaDB.
 
 ### How it works
 
@@ -17,7 +17,7 @@ kit supports semantic code search using vector embeddings and ChromaDB.
 ### Example Usage
 
 ```python
-from kit import Repository
+from codekite import Repository
 from sentence_transformers import SentenceTransformer
 
 # Use any embedding model you like
@@ -33,12 +33,12 @@ results = repo.search_semantic("How is authentication handled?", embed_fn=embed_
 for hit in results:
     print(hit["file"], hit.get("name"), hit.get("type"), hit.get("code"))
 # Example output:
-# src/kit/auth.py login function def login(...): ...
-# src/kit/config.py AUTH_CONFIG variable AUTH_CONFIG = {...}
+# src/codekite/auth.py login function def login(...): ...
+# src/codekite/config.py AUTH_CONFIG variable AUTH_CONFIG = {...}
 
 ### Choosing an Embedding Model
 
-`kit` is model-agnostic: pass any function `str -> List[float]`.
+`codekite` is model-agnostic: pass any function `str -> List[float]`.
 
 * **Local (open-source)** - e.g. [`sentence-transformers`](https://www.sbert.net/) models like `all-MiniLM-L6-v2` (see example above). 100 MB-ish download, fast CPU inference.
 * **Cloud API** - e.g. OpenAI `text-embedding-3-small`. Define:
@@ -59,13 +59,13 @@ for hit in results:
 
 ### Persisting & Re-using an Index
 
-The index lives under `.kit/vector_db` by default (one Chroma collection per path).
+The index lives under `.codekite/vector_db` by default (one Chroma collection per path).
 
 ```python
-vs = repo.get_vector_searcher(embed_fn, persist_dir=".kit/my_index")
+vs = repo.get_vector_searcher(embed_fn, persist_dir=".codekite/my_index")
 vs.build_index()
 # … later …
-searcher = repo.get_vector_searcher(embed_fn, persist_dir=".kit/my_index")
+searcher = repo.get_vector_searcher(embed_fn, persist_dir=".codekite/my_index")
 results = searcher.search("add user authentication")
 ```
 
@@ -86,7 +86,7 @@ for details.
 Combine `VectorSearcher` with `ContextAssembler` to build an LLM prompt containing only *relevant* code:
 
 ```python
-from kit import ContextAssembler
+from codekite import ContextAssembler
 chunks = repo.search_semantic("jwt auth flow", embed_fn=embed_fn, top_k=10)
 assembler = ContextAssembler(max_chars=12_000)
 context = assembler.from_chunks(chunks)
@@ -95,10 +95,10 @@ llm_response = my_llm.chat(prompt + context)
 
 ### Limitations & Tips
 
-* Indexing a very large monorepo may take minutes: consider running on CI and committing `.kit/vector_db`.
+* Indexing a very large monorepo may take minutes: consider running on CI and committing `.codekite/vector_db`.
 * Embeddings are language-agnostic - comments & docs influence similarity too.  Clean code/comments improve search.
 * Exact-keyword search (`repo.search_text()`) can still be faster for quick look-ups; combine both techniques.
 
 <Aside type="note">
-  The CLI (`kit search` / `kit serve`) currently performs **text** search only. A semantic variant is planned.
+  The CLI (`codekite search` / `codekite serve`) currently performs **text** search only. A semantic variant is planned.
 </Aside>
